# wasplib

./: .gitignore  Cargo.toml  README.md  all_go_contracts.bat  all_rust_contracts.bat  copy_rust_wasm.bat  datamodel.json  donatewithfeedback.go  fairauction.go  fairroulette.go  fairroulette.json  go.mod  go.sum  increment.go  increment.json  main.go  schema.json  tinygo_build.bat  tokenregistry.go  wart.bat  wasmer.bat  wasp.bat
rust/: Cargo.toml  README.md
rust/contracts/: README.md  build_rust.bat  template.bat
rust/contracts/dividend/: Cargo.toml  README.md
rust/contracts/dividend/go/: dividend.go  (+2 more)
rust/contracts/donatewithfeedback/: Cargo.toml
rust/contracts/dummy/: Cargo.toml  README.md
rust/contracts/erc20/: Cargo.toml  b.bat  cp.bat
rust/contracts/fairauction/: Cargo.toml  schema.json
rust/contracts/fairroulette/: Cargo.toml  README.md
rust/contracts/hellonewworld/: Cargo.toml  README.md
rust/contracts/helloworld/: Cargo.toml  README.md
rust/contracts/inccounter/: Cargo.toml
rust/contracts/increment/: Cargo.toml  README.md
rust/contracts/test_dummy/: Cargo.toml  b.bat
rust/contracts/testcore/: Cargo.toml  cp.bat
rust/contracts/tokenregistry/: Cargo.toml  schema.json
rust/donatewithfeedback/: Cargo.toml  README.md
rust/donatewithfeedback/src/: lib.rs
rust/fairauction/: Cargo.toml  README.md
rust/fairauction/src/: lib.rs
rust/fairroulette/: Cargo.toml
rust/fairroulette/src/: lib.rs
rust/increment/: Cargo.toml
rust/increment/src/: lib.rs
rust/tokenregistry/: Cargo.toml  README.md
rust/tokenregistry/src/: lib.rs
rust/wasplib/: Cargo.toml
rust/wasplib/src/: lib.rs
(+1044 files in other folders)
