[workspace]
members = [
    "wasplib",
    "contracts/donatewithfeedback",
    "contracts/erc20",
    "contracts/fairauction",
    "contracts/fairroulette",
    "contracts/helloworld",
    "contracts/increment",
    "contracts/tokenregistry",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

